
all (GUI):
- wxMenu(Bar)::Insert() and Remove() functions for dynamic menu menagament
- wxToolBar supports arbitrary controls (not only buttons) and can be
  dynamically changed (Delete/Insert functions)
- wxTreeCtrl and wxListCtrl allow setting colour/fonts for individual items
- "file open" dialog allows selecting multiple files at once (contributed by
  John Norris)
- wxDC::DrawRotatedText() (based on contribution by Hans-Joachim Baader)

- TIFF support added (libtiff required and included in the distribution)

wxMSW:

- wxTreeCtrl::IsVisible() bug fixed (thanks to Gary Chessun)
- tooltips work with wxRadioBox
- returning FALSE from OnPrintPage() aborts printing

wxGTK:

- wxFontMapper endless recursion bug (on some systems) fixed
- wxGTK synthesizes wxActivateEvents
- UpdateUI handlers may be used with wxTextCtrl

NOTE: for changes after wxWindows 2.1.0 b4, please see the CVS
change log.

Major improvements are listed in readme.txt.

2.1.0, b4, May 9th 1999
-----------------------

wxGTK:

- JPEG support added.
- Many fixes and changes not thought worth mentioning in this file :-)

wxMSW:

- wxNotebook changes: can add image only; wxNB_FIXEDWIDTH added;
  SetTabSize added.
- JPEG support added.
- Fixes for Cygwin compilation.
- Added wxGA_SMOOTH and wxFRAME_FLOAT_ON_PARENT styles.
- Many fixes people didn't tell this file about.

wxMotif:


General:

- Some changes for Unicode support, including wxchar.h/cpp.


2.0.1 (release), March 1st 1999
-------------------------------

wxGTK:

- wxGLCanvas fixes.
- Slider/spinbutton fixes.

wxMSW:

- Fixed problems with <return> in dialogs/panels.
- Fixed window cursor setting.
- Fixed toolbar sizing and edge-clipping problems.
- Some makefile fixes.

wxMotif:

- None.

General:

- Added wxUSE_SOCKETS.
- More topic overviews.
- Put wxPrintPaperType, wxPrintPaperDatabase into
  prntbase.h/cpp for use in non-PostScript situations
  (e.g. Win16 wxPageSetupDialog).


Beta 5, February 18th 1999
--------------------------
